build_output_10.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava FAILED
/home/az/project/BusinessCraft/common/src/main/java/com/quackers29/businesscraft/client/CommonClientSetup.java:70: error: incompatible types: bad return type in method reference
        rendererRegistrar.accept(CommonModEntityTypes.TOURIST.get(), TouristRenderer::new);
                                                                     ^
    TouristRenderer cannot be converted to EntityRenderer<Entity>
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':common:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
1 actionable task: 1 executed
